# dnse-py

./: .gitignore  =0.24  CHANGELOG.md  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: DOCUMENTATION-INDEX.md  QUICK-START.md  README.md  api-reference.md  code-standards.md  codebase-summary.md  dnseopenapi-en.yaml  project-overview-pdr.md  system-architecture.md
examples/: .env.example  README.md  quickstart.py
examples/reference/: accounts.py  async-client.py  deals.py  market-stream.py  market.py  orders-email-otp.py  orders-smart-otp.py  orders.py  trading-stream.py
examples/use-cases/: market-data.py  order-history.py  place-a-trade.py  portfolio-check.py
src/dnse/: __init__.py  _base_client.py  _hmac_signer.py  _http.py  _version.py  async_client.py  client.py  exceptions.py
src/dnse/models/: __init__.py  accounts.py  (+5 more)
tests/: conftest.py  test_async_client.py  test_base_client_parse.py  test_base_client_retry.py  test_exceptions.py  test_hmac_signer.py  test_http.py  test_models.py  test_models_accounts.py  test_models_auth.py  test_models_deals.py  test_models_market.py  test_models_orders.py  test_rate_limit_info.py  test_resources.py  test_resources_async_integration.py  test_resources_integration.py  test_stream_auth.py  test_stream_base.py  test_stream_base_connection.py  test_stream_encoding.py  test_stream_market.py  test_stream_models.py  test_sync_client.py
tests/integration/: conftest.py  test_async_pipeline.py  test_auth_pipeline.py  test_sync_pipeline.py
(+14 files in other folders)
